kubernetes/bg-library.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg-library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg-library-app
  template:
    metadata:
      labels:
        app: bg-library-app
    spec:
      volumes:
        - name: bg-data
          persistentVolumeClaim:
            claimName: cl-pvc
      containers:
        - name: bg-db
          image: mysql:latest
          ports:
            - containerPort: 3308
          volumeMounts:
            - name: bg-data
              mountPath: /var/lib/mysqlbg
        - name: bg-library
          image: dopudjdejan/local-library
          command:
            [
              "uvicorn",
              "main:app",
              "--reload",
              "--host",
              "0.0.0.0",
              "--port",
              "83",
            ]
          ports:
            - containerPort: 83
