kubernetes/central-library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-library
spec:
  selector:
    app: central-library-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
