kubernetes/ns-library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-library-service
spec:
  selector:
    app: ns-library-app
  ports:
    - protocol: TCP
      port: 82
      targetPort: 82
